2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: Cleaned up code after latest hack.
	* src/scm_gerber.c: Changed format of list delivered to
	  the backend; no delta center points. Now it's all calculated
	  center points and angles.
	* scheme/gerb-ps.scm: Accept the new list, but doesn't do anything
	  with it yet.

	
2001-11-03 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.c: Inserted check for undefined apertures that
	  was earlier removed.

	
2001-11-02 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.h, src/gerber.c, src/draw.c: Now almost
	  all calculation for circles is done when parsing and
	  not when (re)drawing.
	* src/gerbv.c: Removed two unnecessary defines.
	
	
2001-10-31 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Added zooming with scroll wheel on mouse.
	* README: Added info on how to configure XFree86 for scroll mouse.

	
2001-10-28 Stefan Petersen (spe@stacken.kth.se)

	* src/gerber.[hc]: Fixed bug causing parser to reports
	  points with wrong aperture. Pointed out by Dan Christian.
	

2001-10-30 Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c, src/gerber.h, src/gerber.c
	  Moved new_image() to the correct place

	
2001-10-28 Andreas Andersson (e92_aan@e.kth.se)

	* src/Makefile.am
	  Added drill.c to SOURCES since it seems to work well enough
	  for some testing.
	* src/drill.c
	  Added an input file format guessing function.
	  Some kludges to get around scaling problems.
	* src/gerbv.c
	  Separated File/Open command into File/Open Gerber... and
	  File/Open Drill... Added functions to open drill files.
	* src/*.c:
	  A few speling errors fixed.

	
2001-10-28 Stefan Petersen (spe@stacken.kth.se)

	* src/draw.c, src/gerber.h, src/gerber.c, src/scm_gerber.c:
	  aperture array is now full size and array index is very
	  simple.
	

2001-10-27 Stefan Petersen (spe@stacken.kth.se)

	* src/*.[ch]: typedef:ed all internal structs to *_t
	

-- Release 0.0.4 --	
	